--- a/design_document/多线程后台下载.md
+++ b/design_document/多线程后台下载.md
@@ -2,7 +2,7 @@
 
 - 设计的主要类
   - package com.openthos.appstore.utils.SQLiteHelper
-  - package com.openthos.appstore.utils.DownloadKeeper
+  - package com.openthos.appstore.utils.SQLOperator
   - package com.openthos.appstore.download.Downloader
   - package com.openthos.appstore.download.DownloadListener
   - package com.openthos.appstore.download.DownloadManager
@@ -122,25 +122,24 @@
   - 多任务下载的管理
   ***
       //获取数据库存储的下载任务
-      private void recoverData(Context context, String userID) {
+           private void recoverData(Context context, String userID) {
             stopAllTask();
-            mTaskList = new ArrayList<DownLoader>();
-            DownloadKeeper datakeeper = new DownloadKeeper(context);
-            ArrayList<SQLDownLoadInfo> sqlDownloadInfoList = null;
+            mTaskList = new ArrayList<>();
+            mSQLOperator = new SQLOperator(context);
+            ArrayList<DownloadInfo> downloadInfoList = null;
             if (userID == null) {
-                sqlDownloadInfoList = datakeeper.getAllDownLoadInfo();
+                downloadInfoList = mSQLOperator.getAllDownloadInfo();
             } else {
-                sqlDownloadInfoList = datakeeper.getUserDownLoadInfo(userID);
+                downloadInfoList = mSQLOperator.getUserDownloadInfo(userID);
             }
-            if (sqlDownloadInfoList.size() > 0) {
-                int listSize = sqlDownloadInfoList.size();
+            if (downloadInfoList.size() > 0) {
+                int listSize = downloadInfoList.size();
                 for (int i = 0; i < listSize; i++) {
-                    SQLDownLoadInfo sqlDownLoadInfo = sqlDownloadInfoList.get(i);
-                    DownLoader sqlDownLoader = new DownLoader(
-                            context, sqlDownLoadInfo, mPool, userID, mIsSupportBreakpoint, false);
-                    sqlDownLoader.setDownLodSuccesslistener(mDownloadsuccessListener);
-                    sqlDownLoader.setDownLoadListener("public", mAlltasklistener);
-                    mTaskList.add(sqlDownLoader);
+                    DownloadInfo downloadInfo = downloadInfoList.get(i);
+                    Downloader sqlDownloader = new Downloader(
+                            context, downloadInfo, mPool, userID, mIsSupportFTP, false);
+                    sqlDownloader.setDownloadListener("public", mAlltasklistener);
+                    mTaskList.add(sqlDownloader);
                 }
             }
         }
