--- a/design_document/搜索功能的实现.md
+++ b/design_document/搜索功能的实现.md
@@ -4,21 +4,22 @@
   即把服务器上所有的应用数据保存在本地，然后在本地进行数据搜索，进而显示在界面上
 
   - 缓存服务器数据，这里是吧网络上的数据下载下来保存在了SharePreference里，到时候搜索的时候可以读取本地是否保存有这些数据，然后加载出来
-  ***
-        //保存服务器数据
-        private void saveAllData() {
-            initUrl();
-            new Thread(new Runnable() {
+  
+    - 保存服务器数据
+    ***
+        private void updateAllData() {
+            new Thread() {
                 @Override
                 public void run() {
-                    String allData = NetUtils.getNetStr(MainActivity.this, "/all");
+                    String allData = NetUtils.getNetStr("/all");
                     if (!TextUtils.isEmpty(allData)) {
                         try {
-                            DataInfo dataInfo = new DataInfo(new JSONObject(allData));
-                            if (dataInfo != null && dataInfo.getAppList() != null) {
-                                List<AppLayoutGridviewInfo> appList = dataInfo.getAppList();
+                            NetDataListInfo netDataInfos = new NetDataListInfo(new JSONObject(allData));
+                            if (netDataInfos != null && netDataInfos.getNetDataInfoList() != null) {
+                                List<AppItemInfo> appList = netDataInfos.getNetDataInfoList();
+                                SPUtils.clearData(MainActivity.this, Constants.SP_ALL_DATA);
                                 for (int i = 0; i < appList.size(); i++) {
-                                    AppLayoutGridviewInfo appInfo = appList.get(i);
+                                    AppItemInfo appInfo = appList.get(i);
                                     SPUtils.saveAllData(MainActivity.this, appInfo);
                                 }
                             }
@@ -28,101 +29,118 @@
                     }
                     mHandler.sendEmptyMessage(Constants.REFRESH);
                 }
-            }).start();
+            }.start();
         }
-         
-        //将数据保存到SP中，第二个参数是这个类的实体类                   
-        public static void saveAllData(Context context, AppLayoutGridviewInfo appInfo) {
+    ***
+    - 将数据保存到SP中，第二个参数是这个类的实体类   
+    ***
+        public static void saveAllData(Context context, AppItemInfo appInfo) {
             SharedPreferences.Editor edit =
                     context.getSharedPreferences(Constants.SP_ALL_DATA, Context.MODE_PRIVATE).edit();
-            String json = "{\"id\":" + appInfo.getId() + "," +
-                    "\"packagename\":\"" + appInfo.getAppPackageName() + "\"," +
-                    "\"name\":\"" + appInfo.getName() + "\"," +
-                    "\"version\":\"" + appInfo.getVersionName() + "\"," +
-                    "\"icon\":\"" + appInfo.getIconUrl() + "\"," +
-                    "\"download\":\"" + appInfo.getDownloadUrl() + "\"," +
-                    "\"size\":" + appInfo.getFileSize() +
+            String json = "{\"taskId\":" + appInfo.getTaskId() + "," +
+                    "\"fileSize\":\"" + appInfo.getFileSize() + "\"," +
+                    "\"packageName\":\"" + appInfo.getPackageName() + "\"," +
+                    "\"appName\":\"" + appInfo.getAppName() + "\"," +
+                    "\"versionName\":\"" + appInfo.getVersionName() + "\"," +
+                    "\"versionCode\":\"" + appInfo.getVersionCode() + "\"," +
+                    "\"downloadUrl\":\"" + appInfo.getDownloadUrl() + "\"," +
+                    "\"iconUrl\":\"" + appInfo.getIconUrl() + "\"," +
+                    "\"describle\":\"" + appInfo.getDescrible() + "\"," +
+                    "\"type\":\"" + appInfo.getType() + "\"," +
+                    "\"company\":\"" + appInfo.getCompany() + "\"," +
+                    "\"star\":" + appInfo.getStar() +
                     "}";
-            edit.putString(appInfo.getName(), json);
+            edit.putString(appInfo.getAppName(), json);
             edit.commit();
         }
-  ***
+      ***
   - 监听设置。对EditText做了一个TextWatcher监听
   ***
         final EditText content = (EditText) findViewById(R.id.activity_title_content);
-        content.addTextChangedListener(new TextWatcher() {
+        class SearchTextWatcher implements TextWatcher {
             @Override
             public void beforeTextChanged(CharSequence s, int start, int count, int after) {
-
             }
-
+    
             @Override
             public void onTextChanged(CharSequence s, int start, int before, int count) {
-
             }
-
+    
             @Override
             public void afterTextChanged(Editable editable) {
-                if (!TextUtils.isEmpty(editable.toString())) {
-                    Message message = mHandler.obtainMessage();
-                    message.what = Constants.SEARCH_FRAGMENT;
-                    message.obj = editable.toString();
-                    mHandler.sendMessage(message);
+                if (mIsSearch) { //判断是否通知加载搜索页面
+                    mHandler.sendMessage(
+                            mHandler.obtainMessage(Constants.SEARCH_FRAGMENT, editable.toString()));
+                }
+                mIsSearch = true; //标志变量，是否清空搜索框
+            }
+        }
+  ***
+  - 清空搜索框
+  ***
+       @Override
+        public void onClick(View view) {
+           ....
+            if (!TextUtils.isEmpty(mSearchText.getText())) {
+                mIsSearch = false;
+                mSearchText.clearFocus();
+                mSearchText.setText("");
+            }
+        }
+  ***
+  ***
+      class HomeItemClick implements View.OnClickListener {
+            @Override
+            public void onClick(View view) {
+                .....
+                if (!TextUtils.isEmpty(mSearchText.getText())) {
+                    mIsSearch = false;
+                    mSearchText.clearFocus();
+                    mSearchText.setText("");
                 }
             }
-        });
-  ***
-  - 然后获得需要搜索的内容之后通知MainActivity的Handler刷新界面，跳到搜索界面
-  ***
-        case Constants.SEARCH_FRAGMENT:
-            fragment = mFragments.get(Constants.SEARCH_FRAGMENT);
-            if (fragment == null) {
-                fragment = new SearchFragment();
-                mFragments.put(Constants.SEARCH_FRAGMENT, fragment);
-            }
-            addFragment(transaction, fragment, msg.what);
-            if (getData(msg) != null) {
-                ((SearchFragment) fragment).setDatas((String) getData(msg));
-            }
-            break;
+        }
   ***
   - 在搜索界面首先是获得了传过来的界面数据，它的布局很简单，就是一个GridView，主要实现是以下代码
-  ***           
-        //初始化数据
+    - 初始化数据
+    ***   
+        @Override
         public void initData() {
+            mDatas.clear();
             List<String> searchData = SPUtils.getSearchData(getActivity(), mContent);
-            List<AppLayoutGridviewInfo> datas = new ArrayList<>();
             if (searchData != null) {
                 for (int i = 0; i < searchData.size(); i++) {
-                    String data = SPUtils.getData(getActivity(),
-                            Constants.SP_ALL_DATA, searchData.get(i));
                     try {
-                        AppLayoutGridviewInfo gridviewInfo =
-                                new AppLayoutGridviewInfo(new JSONObject(data));
-                        datas.add(gridviewInfo);
+                        AppItemInfo appItemInfo =
+                                new AppItemInfo(new JSONObject(searchData.get(i)));
+                        mDatas.add(appItemInfo);
                     } catch (JSONException e) {
                         e.printStackTrace();
                     }
                 }
             }
-            AppLayoutInfo appLayoutInfo = new AppLayoutInfo(datas);
-            appLayoutInfo.setType(getActivity().getString(R.string.search));
-            mListAdapter.addItem(appLayoutInfo);
+            mAppItemAdapter.refreshLayout();
         }
-                         
-         //获取包含搜索内容的所有数据，第二个参数是要搜索的内容
-        public static List<String> getSearchData(Context context, String content) {
+     ***                    
+     - 获取包含搜索内容的所有数据，第二个参数是要搜索的内容
+     ***
+         public static List<String> getSearchData(Context context, String content) {
             List<String> list = new ArrayList<>();
             SharedPreferences sp =
                     context.getSharedPreferences(Constants.SP_ALL_DATA, Context.MODE_PRIVATE);
-            Map<String, ?> all = sp.getAll();
-            Set<? extends Map.Entry<String, ?>> entries = all.entrySet();
-            for (Map.Entry<String, ?> entry : entries) {
-                if (entry.getKey() != null && content != null &&
-                        entry.getKey().toLowerCase().contains(content.toLowerCase().trim())) {
-                    list.add(entry.getKey());
+            Map<String, String> all = (Map<String, String>) sp.getAll();
+            if (!TextUtils.isEmpty(content)) {
+                for (Map.Entry<String, String> entry : all.entrySet()) {
+                    if (entry.getKey().toLowerCase().contains(content.toLowerCase().trim())) {
+                        list.add(entry.getValue());
+                    }
+                }
+            } else {
+                for (Map.Entry<String, String> entry : all.entrySet()) {
+                    list.add(entry.getValue());
                 }
             }
+    
             return list;
-        }
-  ***
+         }
+     ***
